--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = 'https://mambusskruj.github.io/'
 languageCode = 'en-us'
 title = 'Home'
 languagecode = "en"
-theme = 'black-and-light'
+theme = 'black-and-light-modified'
 
 pygmentsstyle = "tango"
 pygmentscodefences = true
