--- a/hugo.toml
+++ b/hugo.toml
@@ -2,16 +2,17 @@ baseURL = 'https://mambusskruj.github.io/'
 languageCode = 'en-us'
 title = 'Home'
 languagecode = "en"
-theme = 'black-and-light-modified'
+# theme = 'black-and-light-modified'
 
 pygmentsstyle = "tango"
 pygmentscodefences = true
 
-[module]
-[[module.mounts]]
-    source = 'content'
-    target = 'content'
+# assetDir = "static"
 
+# [module]
+# [[module.mounts]]
+#     source = 'content'
+#     target = 'content'
 
 [params]
   sitename = "Home"
